<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:padding="@dimen/padding_16"
    tools:context=".presentation.StartFragment">

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/ivServerStatus"
        android:layout_width="0dp"
        android:layout_height="120dp"
        android:scaleType="centerCrop"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="200dp"
        android:layout_marginHorizontal="54dp"
        android:src="@drawable/server_is_ok"
        app:shapeAppearanceOverlay="@style/RoundedImage" />

    <TextView
        android:id="@+id/tvServerAvailability"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ivServerStatus"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:textSize="@dimen/text_size_30"
        android:fontFamily="@font/proximanovaregular"
        android:textColor="#000000"
        tools:text="@string/server_is_ok" />

    <TextView
        android:id="@+id/tvServerStats"
        style="@style/StatsText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvServerAvailability"
        android:layout_marginTop="64dp"
        android:text="@string/server_stats"
        android:gravity="center"
        android:textSize="@dimen/text_size_24" />

    <ImageView
        android:id="@+id/ivLine"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvServerStats"
        android:layout_marginHorizontal="64dp"
        android:layout_marginTop="4dp"
        android:src="@drawable/black_line" />

    <TextView
        android:id="@+id/tvCpuUsage"
        style="@style/StatsText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ivLine"
        android:layout_marginTop="@dimen/padding_32"
        android:layout_marginStart="@dimen/padding_16"
        android:text="@string/cpu_usage" />

    <TextView
        android:id="@+id/tvCpuUsageValue"
        style="@style/StatsText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@id/tvCpuUsage"
        app:layout_constraintTop_toTopOf="@id/tvCpuUsage"
        app:layout_constraintBottom_toBottomOf="@id/tvCpuUsage"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="@dimen/padding_8"
        tools:text="100 %" />

    <TextView
        android:id="@+id/tvRamUsage"
        style="@style/StatsText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvCpuUsage"
        android:layout_marginStart="@dimen/padding_16"
        android:layout_marginTop="@dimen/padding_8"
        android:text="@string/ram_usage" />

    <TextView
        android:id="@+id/tvRamUsageValue"
        style="@style/StatsText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@id/tvRamUsage"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/tvRamUsage"
        app:layout_constraintBottom_toBottomOf="@id/tvRamUsage"
        android:layout_marginStart="@dimen/padding_8"
        tools:text="100 %" />
    
    <TextView
        android:id="@+id/tvDiskUsage"
        style="@style/StatsText"
        app:layout_constraintHorizontal_chainStyle="spread"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/tvDiskUsageValue"
        android:layout_marginTop="@dimen/padding_16"
        android:text="@string/disk_usage" />

    <TextView
        android:id="@+id/tvDiskUsageValue"
        style="@style/StatsText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@id/tvDiskUsage"
        app:layout_constraintTop_toTopOf="@id/tvDiskUsage"
        app:layout_constraintBottom_toBottomOf="@id/tvDiskUsage"
        tools:text="100 %" />

    <TextView
        android:id="@+id/tvUptimeHours"
        style="@style/StatsText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@id/tvDiskUsageValue"
        app:layout_constraintTop_toTopOf="@id/tvDiskUsageValue"
        app:layout_constraintBottom_toBottomOf="@id/tvDiskUsageValue"
        android:text="@string/uptime_hours" />

    <TextView
        android:id="@+id/tvUptimeHoursValue"
        style="@style/StatsText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="99999"/>

</androidx.constraintlayout.widget.ConstraintLayout>